setup方法の改善

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,20 @@ __pycache__/
 .Python
 venv/
 ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # IDE
 .idea/
@@ -15,4 +29,14 @@ ENV/
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# Project specific
+convertmd.sh
+*~
+*.bak
